New deployment action test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
       - "*.md"
 
 jobs:
-  build-deploy:
+  build:
     name: Build and deploy app
 
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
           persist-credentials: false
 
       - name: Install dependencies 🔧
-        run: npm install
+        run: npm ci
 
       - name: Test 🚨
         run: npm run test
@@ -34,9 +34,29 @@ jobs:
       - name: Build 🏗️
         run: npm run build
 
-      - name: Deploy to GH Pages 🚀
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build
+      - name: Upload Artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: github-pages
+            path: build
+
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
