--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,60 @@
-name: GH Pages Deploy
+# Sample workflow for building and deploying a Next.js site to GitHub Pages
+#
+# To get started with Next.js see: https://nextjs.org/docs/getting-started
+#
+name: Deploy React site to Pages
 
 on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-  push:
-    branches: [main]
-    paths-ignore:
-      - "*.md"
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-  pull_request:
-    branches: [main]
-    paths-ignore:
-      - "*.md"
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
+  # Build job
   build:
-    name: Build and deploy app
-
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          persist-credentials: false
-
-      - name: Install dependencies 🔧
+          node-version: "18"
+          cache: 'npm'
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Install dependencies
         run: npm ci
-
-      - name: Test 🚨
+      - name: Test
         run: npm run test
+      - name: Build
+        run: $npm run build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./build
 
-      - name: Build 🏗️
-        run: npm run build
-
-      - name: Upload Artifact
-          uses: actions/upload-artifact@v2
-          with:
-            name: github-pages
-            path: build
-
+  # Deployment job
   deploy:
-    # Add a dependency to the build job
-    needs: build
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
+      url: 'https://vinchbr.github.io/vinchdev'
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
