--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,10 @@ concurrency:
 
 jobs:
   # Build job
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,27 +38,18 @@ jobs:
         with:
           node-version: "18"
           cache: 'npm'
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
       - name: Install dependencies
         run: npm ci
       - name: Test
         run: npm run test
       - name: Build
-        run: $npm run build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./build
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: 'https://vinchbr.github.io/vinchdev'
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
