--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "devicon-react-svg": "^0.2.4",
     "gh-pages": "^5.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
